--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a:link, a:visited, a:hover, a:active {
+  text-decoration: none!important;
+  color: inherit;
+}
