--- a/src/components/css/beautiful-list.css
+++ b/src/components/css/beautiful-list.css
@@ -27,7 +27,7 @@
   align-self: flex-start;
   background-image: linear-gradient(to bottom, aquamarine, orangered);
   background-attachment: fixed;
-  /* -webkit-background-clip: text; */
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
