--- a/src/components/css/beautiful-list.css
+++ b/src/components/css/beautiful-list.css
@@ -2,17 +2,22 @@
 .ul-colored {
   counter-reset: index;  
   padding: 0;
-  max-width: 300px;
+  max-width: 600px;
+  justify-content: left;
 }
 
 /* List element */
 .li-colored {
   counter-increment: index; 
-  display: flex;
-  align-items: center;
+  display: block;
   padding: 12px 0;
   box-sizing: border-box;
 }
+
+.li-colored h3, .li-colored h4, .li-colored pre {
+  display: inline;
+}
+
 
 
 /* Element counter */
